# sigma

./: .gitignore  Cargo.toml  readme.html  readme.md  todo
src/: main.rs  squigglegenerator.txt
src/card/: card.rs  deck.rs  highlight_marker.rs  mod.rs  properties.rs
src/card/properties/: color.rs  count.rs  fill.rs  mod.rs  shape.rs
src/mechanics/: card_clicked_event.rs  found_set_event.rs  game_cleanup.rs  game_manager.rs  input_manager.rs  mod.rs  playing_field.rs  score.rs  score_counter.rs  selection_manager.rs  set.rs  startup.rs  states.rs  stats.rs  timer.rs
src/mechanics/save/: date.rs  mod.rs  saving.rs
src/mechanics/score_tracking/: mod.rs  save_score.rs  score.rs  stats.rs
src/ui/: button_markers.rs  buttons.rs  game_over.rs  main_menu.rs  mod.rs  stats_screen.rs
